v1.2.8 (2017.12.xx)
  - Update zlib library to version 1.2.11
  - Update cURL library to version 7.57.0
  - Fix logging of HTTP request errors that occurred during multi-step database queries
  - Add "Enable verbose discovery data logging" advanced setting
  - Fix bug causing "Trigger recording discovery immediately after playback" to be applied to "Use network broadcast for device discovery" until restart

v1.2.7 (2017.12.05)
  - Improve handling of in-progress Recorded TV streams that have switched from a live to a recorded state
  - Add support for processing Recorded TV Edit Decision Lists (EDL)
  - Add "Trigger recording discovery immediately after playback" setting

v1.2.6 (2017.11.30)
  - Fix forward seeking problems with Live TV streams
  - Fix playback problems with in-progress Recorded TV streams

v1.2.5 (2017.11.28)
  - Add "Use backend genre string(s) in Electronic Program Guide (EPG)" setting
  - Add "Show DRM protected channels in channel lineups" setting
  - Add synchronization of recording resume position with the storage engine 

v1.2.4 (2017.11.24)
  - Fix bug preventing background discovery task scheduler from stopping properly
  - Remove forced MPEG-TS packet boundary alignment during stream seek and read operations
  - Add workaround to handle multiple calls into ADDON_Create/ADDON_Destroy during installation

v1.2.3 (2017.11.15)
  - Update SQLite database engine to version 3.21.0
  - Update cURL library to version 7.56.1
  - Update libhdhomerun library to version 2017.08.16

v1.2.2 (2017.08.02)
  - Fix EPG update being aborted prematurely when requesting guide data from the past

v1.2.1 (2017.08.02)
  - Add "Disable Channel", "Add to Favorite Channels" and "Remove from Favorite Channels" Client Actions to channel context menus
  - Adapt to new backend discovery URLs (api.hdhomerun.com)
  - Fall back to using a direct tuner stream for Live TV if a storage engine has not been discovered on the network