@@ -1,8 +1,9 @@
 v1.2.8 (2017.12.xx)
   - Update zlib library to version 1.2.11
   - Update cURL library to version 7.57.0
-  - Fix logging of HTTP request errors that occurred during multi-step database queries
   - Add "Enable verbose discovery data logging" advanced setting
+  - Add "Disable reporting of real-time MPEG-TS streams" advanced setting
+  - Fix logging of HTTP request errors that occurred during multi-step database queries
   - Fix bug causing "Trigger recording discovery immediately after playback" to be applied to "Use network broadcast for device discovery" until restart
 
 v1.2.7 (2017.12.05)
